# chimely

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/: Cargo.toml  README.md  build.rs  deny.toml
server/.config/: nextest.toml
server/.sqlx/: query-019a9248f43ab9385414a3327b70dff292bb27ebdc7746ed8220a911360c33c3.json  query-02b7a8edc635d2854f95e2c3fcd362e42f594f551db01404522edf2d59afbf08.json  query-0932b484b2a2984dd757b35721189cd4fd17da8748a5f11a1ca79a367b4f1c03.json  query-0f2a8e6354f459d85970d62d1687e74411b1de6dda14067745fbd3b6883a0d5b.json  query-0fac3caef54230d4a015139ba457e6c4b73d28d8cfab771521c3881399bfc07f.json  query-100df947be7e1c728fae4dc08eba7aadfc5cf1a7db79f2aa9f775cad9f7820b5.json  query-1da28e18affee35bfeab6e37d53b64dced5ceb15f5075a702c5e0f5f8bfc71d3.json  query-1daa6ebb67c322b2d13ae661da7901922831669edf63fe152136e76fce50b018.json  query-1ed6a5541f6b30c9491de45f4dfd22f4656749175d4a2cd3313d28534809be9e.json  query-20d76588199d3fc8f774dd400366d81b4bd51af53c15c616fb94590df60de37f.json  query-2327c14ee1c1d6d613300079ebe48f9bde40de74cfa5fd17827752bb0ae73e23.json  query-2909b6fbae7333ca3933cc75b6390ceeb64761ac36fffcfb325fa458b1fbd8fb.json  query-2a7b3a9fe2373966f2528bb06f1e1c2857cdc218f2abc74e4143acab5ae4748f.json  query-2ab91e60229f527940014ca418adf00085bd6cb71cd69da4e4b864084bda1fb0.json  query-2c6c2b14ee6e2c61d63f4baaa21f4c20d244ac2890a93a3714079288dd719e66.json  query-2e3efa68c10fefc3add073a0ac188f3e552e7b5976f4061b024b939b20a682d5.json  query-2fd7fd7e490e5478cb871dff9c8da9f191eef409c6ee3dad2fc7713008cfdd1a.json  query-2fe95712dae85ce39bc6637175ebe247a42d5408c57339aef039dfdba466874b.json  query-3073432b7ca50c56fadc5eeffbcbcf59d7eea1450b6130d726bdb5e586a82ca0.json  query-30ecd0f842eb3cb9c9beab67f540ee394eff1a82f556e86e18c9548298516270.json  query-323b8e9edeaf1cea854207066b5c00faf99e44c316883c621769e72233d8ea41.json  query-338523d136be79f0d45aa8ba7e2edc5983800c0f5cbe451e9bc02997d9335f0a.json  query-361ec59f18dd407eba3eff6ee906cc4b0a96be294f1c70761031bbbdb098a55f.json  query-37b3aa37286ef6e2f66dd55711e2c43af05d86a6bb26e0934e1e306e87576f19.json  query-3b67eeae90ee66ca27256d474296de3b2554e1d8b79179a0c7f9618b3be75c97.json  query-3b6ba71ae353e3d5b60703f4a0fea97a3b1888db8b91a11c0da429007d9bf2a0.json  query-3c37767031eac8caefffcc9cee0460f2a17259d0e6235a86e191e4e069c0f438.json  query-3d04a9e902ff7ccd1c478de803b54012e79c4960a1904fdd3ab20a27eba538e6.json  query-3dc9a049409f4ee6bf3c21c44b56caa478eef6fffe3354d68a249324825b9f83.json  query-3e7bd3c19f3fb722e7bacb5a08ba6d8510c7b6ceeebbb405383bc755bffdbdf6.json  query-3ebb6c6010f589b970574b014f7d2cb926380bab99ef8c12a15592d915b0c195.json  query-3fda86acbb8084d07a26bccd7aad2c6689df167555875a871de1e2c88d680406.json  query-4243840afad025b76d172a30b9ce1701c865103acdd6f90e4d3aa5a7df0e270b.json  query-448d90202e8f3dc14ea87f5dbc4ea184c39fd415fd92b481ead056b0b9e7e5a6.json  query-4545cde2307dbb6601c818400ff73495024471b7080956c21823a305c531d6d5.json  query-45b323a8d5784ec5e2d24a1d71bf3f2ef36e5172c826c675f43dba74cc4c2701.json  query-46e69ef1f555ca92fdbcf33bbae2aa5b1d79e7eac5cfcdfa1460428959e4bcdd.json  query-47cc4a6bc628deed7494f3f24046c88ace67cac0a573aeaf24fd30f234020cab.json  query-49d507f88cca634c6a1ab43f299867440c93f64aa98b897601bf29b7a43744d3.json  query-49ed8e2fa9e09aa6056d115b4aae2313cf158a87f9d1f5d81ced32dbaf4117d2.json  (+123 more)
server/admin/: index.html  package.json  tsconfig.json  vite.config.ts
server/migrations/: 0001_init.sql  0002_hardening.sql  0003_admin_users.sql  0004_read_overrides.sql  0005_archive.sql
server/src/: auth.rs  bootstrap.rs  config.rs  db.rs  dev.rs  dlq.rs  error.rs  extract.rs  http.rs  ids.rs  jobs.rs  lib.rs  main.rs  metrics_sampler.rs  openapi.rs  partitions.rs  pubsub.rs  ratelimit.rs  roles.rs  state.rs  telemetry.rs  timeline.rs  worker.rs
server/tests/: admin.rs  auth.rs  chaos.rs  health.rs  inbox.rs  log_scrub.rs  management.rs  metrics.rs  migrations.rs  proptest_inbox.proptest-regressions  proptest_inbox.rs  quickstart.rs  ratelimit.rs  redteam_archiveall_races.rs  redteam_broadcast_gc_resurrect.rs  redteam_contract_drift.rs  redteam_contract_drift_upsert.rs  redteam_cross_env.rs  shutdown.rs  (+14 more)
(+160 files in other folders)
