[package]
name = "chimely"
version = "0.1.2"
edition = "2024"
license = "AGPL-3.0-only"
description = "In-app notification inbox infrastructure: one binary + Postgres + Redis."
# Ensures admin/dist exists (placeholder when the SPA is unbuilt) so the
# rust-embed derive and `cargo nextest`/`cargo run -- openapi` work without a
# Node build. The Docker/CI release build populates admin/dist first.
build = "build.rs"

[lib]
name = "chimely"
path = "src/lib.rs"

[[bin]]
name = "chimely"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
# Admin password hashing (Argon2id) + PHC-string storage. RustCrypto crate,
# MIT/Apache-2.0 (cargo-deny clean); pulls password-hash and base64ct, both
# permissive. Server-only — never embedded in the SDK packages.
argon2 = "0.5.3"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
fred = { version = "10.1.0", features = ["subscriber-client", "i-scripts", "sha-1"] }
form_urlencoded = "1.2.2"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
rand = "0.9.2"
# Embeds the admin SPA (server/admin/dist) into the binary — the single-file
# deploy story (specs/phase-4-admin.md). debug-embed: embed in every profile
# so tests serve the same bytes the release binary ships, no runtime disk
# dependency. mime-guess: content types for the served assets.
rust-embed = { version = "8.5.0", features = ["mime-guess", "debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Already in the tree via utoipa's yaml feature. Direct use: the 3.0.3
# contract-dialect export (openapi::to_contract_yaml).
serde_norway = "0.9"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono", "json", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
# CORS for the subscriber plane only. The widget calls from arbitrary
# customer origins; the HMAC hash is the auth boundary, never the Origin.
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["yaml", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }

[dev-dependencies]
proptest = "1.8.0"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres", "redis"] }
